tests/sumo/tls/wauts/errors/cross3ltl_error_missing_to_prog/errors.sumo
Error: Attribute 'to' is missing in definition of wautSwitch 'w1'.
Quitting (on error).
